@@ -1,3 +1,13 @@
+2012-04-16  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/x86_64/x86_64-defs.m4 (palignr): New macro.
+	* mpn/x86_64/fastsse/copyd-palignr.asm: Use palignr macro.
+	* mpn/x86_64/fastsse/copyi-palignr.asm: Likewise.
+
+	(x86_opcode_regxmm, x86_opcode_regxmm_list): New, made from x86 mmx
+	counterparts.
+	(x86_lookup): Copy from x86/x86-defs.m4.
+
 2012-04-15 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* tests/mpz/t-bin.c: Add more tests on small values.
